--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,2 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@tailwind variants;
+@import 'tailwindcss';
+@import '../../vendor/filament/filament/dist/theme.css';
